# quartermaster

./: .dockerignore  .env.example  .gitignore  CODING_RULES.md  CONTRIBUTING.md  DRIFT_SPEC.md  FINDING_IDENTITY_SPEC.md  GOALS_AND_NON_GOALS.md  Makefile  PROJECT_VISION.md  README.md  ROADMAP.md  SECURITY.md  STACK_DECISIONS.md  SYSTEM_PRINCIPLES.md  UNDERSTANDING_ERA.md  docker-compose.yml  pyproject.toml
backend/: config.py  health.py  lifecycle.py  main.py  operations.py  scheduler.py
benchmarks/: bench_phase12.py  bench_phase13.py  bench_snapshot_scale.py  bench_synthesis.py  run_all.py
cli/: __init__.py  main.py
cognition/: attention.py  check_mapper.py  clustering.py  comparison.py  confidence.py  consequence_mapper.py  consequence_walk.py  consolidation.py  cost_accountability.py  cost_advisor.py  cost_investigation.py  deduplication.py  evidence_compression.py  four_w.py  heuristics.py  investigation.py  investigation_quality.py  meaning_confirmation.py  meaning_drafter.py  meaning_proposer.py  observations.py  patterns.py  prioritization.py  project_activity.py  push_policy.py  query_workflows.py  recurrence.py  runtime_health.py  runtime_topology.py  severity.py  signal_quality.py  survivability.py  synthesis.py  systemic_drift.py  temporal_analysis.py  validation.py
config/: check_playbook.yml  cost_advisor.yml  observability_config.py  profiles.py  project_context.py  projects.example.yml
delivery/: __init__.py  formatting.py  health.py  notifications.py  pipeline.py  routing.py  telegram.py
docker/: Dockerfile
docs/: AGENT_STORY_SPEC.md  API_OVERVIEW.md  ARCHITECTURE.md  CLI.md  COST_ACCOUNTABILITY_SPEC.md  COST_ADVISOR_SPEC.md  DEPLOYMENT.md  EXAMPLE_REPORT.md  FACTORY_COVERAGE_SPEC.md  FAQ.md  FOUR_W_INTELLIGENCE.md  INCIDENT_REPORTING_SPEC.md  INDEX_DESIGN.md  INDEX_VISION.md  INSTALLATION.md  INTEGRATIONS.md  LIVING_UNDERSTANDING.md  LLM_USAGE.md  MAINTENANCE.md  MANAGEMENT_BRIEFING_SPEC.md  MULTI_PROJECT.md  NOTIFICATION_LAYER.md  OBSERVABILITY_ECONOMIC_PROJECT_AGENT.md  OBSERVER_CONVERGENCE.md  OPERATIONAL_MEMORY_REPORT_ARCHITECTURE_V4.md  OPERATIONS.md  OVERVIEW.md  PROJECT_PROFILE_SPEC.md  SCALING.md  SDK.md  TELEGRAM_DELIVERY.md  UNDERSTANDING_LAYER_MVP.md  WHY_DETERMINISTIC.md  WORKER_ECONOMICS_SPEC.md  WORKER_HEALTH_SPEC.md  WORKER_KPI_SPEC.md  WORKER_REVIEW_SPEC.md
economics/: __init__.py  connection_evidence.py  key_registry.py  provider_usage.py  runner.py
integrations/: __init__.py  profiles.py
llm_intelligence/: analyzer.py  cost_intelligence.py  detector.py  ingestion_limits.py  ingestion_quality.py  privacy.py  usage_analysis.py
memory/: drift_detector.py  finding_store.py  graph_store.py  llm_store.py  models.py  project_store.py  retention.py  snapshot_engine.py  storage_hygiene.py  store.py
observability/: agent_activity.py  economic.py  logger.py
reports/: digest.py  (+15 more)
(+181 files in other folders)
